--- a/dzien02/moj_styl.css
+++ b/dzien02/moj_styl.css
@@ -4,8 +4,10 @@ body {
 }
 h1 {
     color: green;
+    background-color: #ffff44;
     font-family: PokemonFont2, Tahoma, Arial, sans-serif;
     font-size: 50pt;
+    border: 50px solid black;
 }
 th {
     color: rgb(40, 81, 156);
@@ -19,6 +21,8 @@ p {
     text-align: justify;
     background-color: #ee4455;
     padding: 5px;
+    margin: 0px;
+    outline: 1px solid black;
 }
 
 u {
