--- a/dzien02/moj_styl.css
+++ b/dzien02/moj_styl.css
@@ -51,3 +51,9 @@ main {
     width: 900px;
     margin: auto;
 }
+
+img {
+    float: right;
+    outline: 1px solid black;
+    margin: 0 0 15px 15px;
+}
