--- a/dzien02/firma.css
+++ b/dzien02/firma.css
@@ -7,7 +7,7 @@ body {
 }
 
 main {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.6);
     color: #fff;
     width: 960px;
     margin: auto;
@@ -22,4 +22,8 @@ h1 {
 p {
     text-shadow: black 1px 1px 2px;
     text-align: justify;
+}
+
+#vivamus {
+    font-size: 18pt;
 }
