--- a/dzien02/firma.css
+++ b/dzien02/firma.css
@@ -39,3 +39,11 @@ li {
 li.weekend {
     background-color: #fff;
 }
+
+ol li {
+    color: #fff;
+}
+
+#vivamus u {
+    background-color: #336;
+}
