--- a/dzien02/firma.css
+++ b/dzien02/firma.css
@@ -15,12 +15,11 @@ main {
     border-radius: 16px;
 }
 
-h1 {
-    text-shadow: black 1px 1px 3px;
+h1, h2, h3, h4, h5, h6, p, li {
+    text-shadow: black 1px 1px 2px;
 }
 
 p {
-    text-shadow: black 1px 1px 2px;
     text-align: justify;
 }
 
