--- a/dzien02/firma.css
+++ b/dzien02/firma.css
@@ -65,6 +65,7 @@ nav ul li {
 }
 
 nav ul li a {
+    transition-duration: 1s;
     text-align: center;
     text-decoration: none;
     display: block;
@@ -80,6 +81,8 @@ nav ul li a:visited {
 }
 
 nav ul li a:hover {
+    color: #fff;
+    text-shadow: #fff 0 0 3px;
     background-color: #000;
 }
 
