--- a/dzien02/firma2.css
+++ b/dzien02/firma2.css
@@ -43,11 +43,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url(ocean1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: #ccc;
     font-family: sans-serif;
+}
+
+body {
+    background-image: url(ocean1.jpg);
+    background-color: #ccc;
 }
 
 main {
@@ -64,6 +67,27 @@ nav a:hover {
     text-shadow: #27f 0 0 3px;
     background-color: #ddf;
 }
+
+body.noc {
+    background-image: url(noc.jpg);
+    background-color: #004;
+}
+
+body.noc main {
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+}
+
+body.noc nav a {
+    color: rgb(255, 101, 204);
+}
+
+body.noc nav a:hover {
+    color: rgb(255, 153, 250);
+    text-shadow: rgb(230, 105, 255) 0 0 3px;
+    background-color: rgb(6, 6, 68);
+}
+
 
 
 nav ul {
